New! Fixed a typo

--- a/Audio_Features_and_Lyric_Spread_Metrics.ipynb
+++ b/Audio_Features_and_Lyric_Spread_Metrics.ipynb
@@ -6,7 +6,7 @@
       "name": "Audio_Features_and_Lyric_Spread_Metrics",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyO67J3X17CcfGkAluoZQCcj",
+      "authorship_tag": "ABX9TyPCXa/k9PfiL+q+B+9PFr3u",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -195,7 +195,7 @@
       "source": [
         "head(esinw_df)"
       ],
-      "execution_count": 2,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -313,7 +313,7 @@
         "               geom = \"raster\", position = \"identity\", bw = 1/2)\n",
         "f3"
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -421,7 +421,7 @@
         "  coord_flip()\n",
         "f3"
       ],
-      "execution_count": 7,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -551,7 +551,7 @@
         "# Now, instead of this\n",
         "head(dummies)"
       ],
-      "execution_count": 9,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -606,7 +606,7 @@
         "# we have this \n",
         "head(key)"
       ],
-      "execution_count": 10,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -689,7 +689,7 @@
         "  mutate(`widely spoken?` = ifelse(is_widely_spoken, \"yes\", \"no\")) %>%\n",
         "  select(-is_widely_spoken)"
       ],
-      "execution_count": 11,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -766,7 +766,7 @@
         "  mutate(`widely spoken?` = ifelse(is_widely_spoken, \"yes\", \"no\")) %>%\n",
         "  select(-is_widely_spoken)"
       ],
-      "execution_count": 12,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -838,7 +838,7 @@
         "wilcox_df <- wilcox_df %>% mutate(rank_sd = as.character(rank_sd)) %>%\n",
         "  mutate(rank_sd  = as.numeric(rank_sd))"
       ],
-      "execution_count": 13,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -903,7 +903,7 @@
         "wilcox_table[order(wilcox_table$obs_rank)[1:15],] %>%\n",
         "  t() %>% data.frame()"
       ],
-      "execution_count": 14,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -961,7 +961,7 @@
         "  t() %>% data.frame()\n",
         "\n"
       ],
-      "execution_count": 15,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1060,7 +1060,7 @@
         "# now the test\n",
         "wilcox.test(rank_sd ~ cat, data = wilcox_df, alternative = \"two.sided\")"
       ],
-      "execution_count": 16,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1165,7 +1165,7 @@
         "  mutate(`widely spoken?` = ifelse(is_widely_spoken, \"yes\", \"no\")) %>%\n",
         "  select(-is_widely_spoken)"
       ],
-      "execution_count": 18,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1241,7 +1241,7 @@
         "  mutate(`widely spoken?` = ifelse(is_widely_spoken, \"yes\", \"no\")) %>%\n",
         "  select(-is_widely_spoken)"
       ],
-      "execution_count": 19,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1322,7 +1322,7 @@
         "wilcox_df2 <- wilcox_df2 %>% mutate(rank_iqr = as.character(rank_iqr)) %>%\n",
         "  mutate(rank_iqr = as.numeric(rank_iqr))"
       ],
-      "execution_count": 20,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1387,7 +1387,7 @@
         "wilcox_table[order(obs.rank)[1:15],] %>%\n",
         "  t() %>% data.frame()"
       ],
-      "execution_count": 21,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1444,7 +1444,7 @@
         "wilcox_table[order(obs.rank)[16:30],] %>%\n",
         "  t() %>% data.frame() "
       ],
-      "execution_count": 22,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1501,7 +1501,7 @@
         "wilcox_table[order(obs.rank)[31:45],] %>%\n",
         "  t() %>% data.frame() "
       ],
-      "execution_count": 23,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1583,7 +1583,7 @@
         "# now the test\n",
         "wilcox.test(rank_iqr ~ cat, data = wilcox_df2, alternative = \"two.sided\")"
       ],
-      "execution_count": 25,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1696,7 +1696,7 @@
         "# And plot the result wit with fviz_cluster\n",
         "fviz_cluster(km_sds, data = sds)"
       ],
-      "execution_count": 37,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1783,7 +1783,7 @@
         "# show table\n",
         "table5"
       ],
-      "execution_count": 51,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1835,11 +1835,11 @@
       "metadata": {
         "id": "mioCvGvhRwbC",
         "colab_type": "code",
+        "outputId": "9c548080-8254-4d1e-e07b-d93bdc8e6580",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 806
-        },
-        "outputId": "9c548080-8254-4d1e-e07b-d93bdc8e6580"
+        }
       },
       "source": [
         "# once again, we'll start with 2 clusters\n",
@@ -1849,7 +1849,7 @@
         "# Plotting the result...\n",
         "fviz_cluster(km_iqrs, data = iqrs)"
       ],
-      "execution_count": 52,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2006,7 +2006,7 @@
         "colab_type": "text"
       },
       "source": [
-        "This will go very slowly, so we'll speed it up with help from R's $\\verb|parappel|$ package"
+        "This will go very slowly, so we'll speed it up with help from R's $\\verb|parallel|$ package"
       ]
     },
     {
@@ -2061,11 +2061,11 @@
       "metadata": {
         "id": "rweH6YeTjRaK",
         "colab_type": "code",
+        "outputId": "a888614b-2a91-4f3a-ff55-ca49e7870ce2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "a888614b-2a91-4f3a-ff55-ca49e7870ce2"
+        }
       },
       "source": [
         "set.seed(74)\n",
@@ -2073,7 +2073,7 @@
         "  n = 100000, df = esinw_df2, col2sim = \"lang\", spread_fxn = sd, target = c(\"en\",\"es\"))\n",
         "print(prob_sds_n100000p)"
       ],
-      "execution_count": 35,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
