New! Minor edits

--- a/DataPreparation.ipynb
+++ b/DataPreparation.ipynb
@@ -6,7 +6,7 @@
       "name": "DataPreparation.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNJ7y+aM9f8af0hOEeqqfbn",
+      "authorship_tag": "ABX9TyOQn+gx2F1CNbYVSSXRWH5l",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,7 +33,7 @@
         "colab": {}
       },
       "source": [
-        "#install.packages(\"quanteda\")"
+        "install.packages(\"quanteda\")"
       ],
       "execution_count": 0,
       "outputs": []
@@ -54,6 +54,20 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "KOLKmmQacFN1",
+        "colab_type": "text"
+      },
+      "source": [
+        "Collecting data was a four step process and happened in python. The python code isn't posted, but I've summarized my steps below.\n",
+        "1. [This page on everynoise.com](http://everynoise.com/thesoundsofcountries.html) has links to 181 spotify playlists, each one specific to a different country. Through a combination of webscraping and requests to the [Spotify Web API](https://developer.spotify.com/documentation/web-api/), information was requested for all the songs on each of the 181 playlists to which this page contained a hyperlink. Those songs for which information was returned were made into a dataframe with columns for each piece of their Spotify metadata.\n",
+        "2. Through many requests to the [Musixmatch API](https://developer.musixmatch.com/), only a small portion of which were fruitful, excerpts of the songs' lyrics were collected and placed into a dataframe as well.\n",
+        "3. With the help of the [langdetect](https://github.com/Mimino666/langdetect) python library, the languages of a couple thousand of the lyric excerpts were able to be identified as one of several dozen languages.\n",
+        "4. Using $\\verb|pandas|$, all these pieces were joined into one dataframe and exported as .csv file called [AFsongDF.csv](https://github.com/stelmanj/MusicAndLanguage/blob/master/AFsongDF.csv).\n"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "bjJPTMX_UQnr",
@@ -70,7 +84,7 @@
         "  row.names = 1) \n",
         "head(AFsongDF)"
       ],
-      "execution_count": 23,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -148,26 +162,13 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "KOLKmmQacFN1",
-        "colab_type": "text"
-      },
-      "source": [
-        "Constructing this data was a process. I'm not going to go into much detail, but the data collection was a four step process and happened in Python. \n",
-        "1. [This page on everynoise.com](http://everynoise.com/thesoundsofcountries.html) has links to over 100 spotify playlists, each one specific to one country. Through a combination of webscraping and requests to the [Spotify Web API](https://developer.spotify.com/documentation/web-api/), information for all songs on all the playlist this page links to was requested. Those songs for which information was returned were made into a dataframe with columns each piece of their Spotify metadata.\n",
-        "2. Through many requests to the [Musixmatch API](https://developer.musixmatch.com/), only a small portion of which were fruitful, excerpts of the songs' lyrics were collected and placed into the data frame as well.\n",
-        "3. With the help of the [langdetect](https://github.com/Mimino666/langdetect) python library, the languages of a couple thousand of the lyric excerpts were able to be labeled as one of several dozen languages."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "PDrZMkHCbgu8",
         "colab_type": "text"
       },
       "source": [
         "Some columns we don't need, like columns 5 and 16 among others. \n",
         "\n",
-        "Those rows that for songs either whose lyrics couldn't be found or whose lyrics' language couldn't be detected will have NaNs in some columns. That won't do."
+        "Those rows for songs either whose lyrics couldn't be found or whose lyrics' language couldn't be detected will have NaNs in some columns. That won't do."
       ]
     },
     {
@@ -250,7 +251,7 @@
         "  cbind(stri_lang_enc) %>%\n",
         "  mutate_if(is.factor, as.character) %>%\n",
         "  # get rid of non-ISO encodings\n",
-        "  filter(Encoding %in% c(\"ISO-8859-1\",\"ISO-8859-9\",\"ISO-8859-2\")) %>%\n",
+        "  filter(Encoding == \"ISO-8859-1\") %>%\n",
         "  # if lang.detect said English but R said something else was more likely, get rid of it\n",
         "  dplyr::filter(ifelse(lang != \"en\", T, ifelse(lang == Language, T, F)))\n",
         "\n",
@@ -265,7 +266,7 @@
         "\n",
         "head(lyrics_df,2)"
       ],
-      "execution_count": 38,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -399,7 +400,7 @@
         "\n",
         "head(lyrics_df2,2)\n"
       ],
-      "execution_count": 39,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -493,11 +494,11 @@
       "metadata": {
         "id": "ZG1I9CKl8nPd",
         "colab_type": "code",
+        "outputId": "b7dc7344-77ec-49e3-b608-86f8848d9af2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 195
-        },
-        "outputId": "b7dc7344-77ec-49e3-b608-86f8848d9af2"
+        }
       },
       "source": [
         "# create a corpus of the lyrics\n",
@@ -513,7 +514,7 @@
         "\n",
         "head(lyrics_sum)"
       ],
-      "execution_count": 34,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -568,11 +569,11 @@
       "metadata": {
         "id": "LLSSx9TS8rgs",
         "colab_type": "code",
+        "outputId": "b0c5840e-bf5c-4878-a824-8f0ba7551046",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 175
-        },
-        "outputId": "b0c5840e-bf5c-4878-a824-8f0ba7551046"
+        }
       },
       "source": [
         "# dat has a lot of audio features that we want to use, and lyrics_sum has a metric we want to include\n",
@@ -589,7 +590,7 @@
         "# let's see what we got now\n",
         "head(esinw_df,5)"
       ],
-      "execution_count": 35,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -642,7 +643,7 @@
       },
       "source": [
         "# Let's save this to an .RData object so we can use it in Audio_Features_and_Lyric_Spread_Metrics\n",
-        "save(esinw_df, file = \"AFaLSM.RData\")"
+        "write.csv(esinw_df, file = \"AFS_esinw.csv\")"
       ],
       "execution_count": 0,
       "outputs": []
@@ -662,11 +663,11 @@
       "metadata": {
         "id": "zo1TmdWlO1SM",
         "colab_type": "code",
+        "outputId": "012c86b8-17f0-4b03-fecf-dc5d72fde124",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 175
-        },
-        "outputId": "012c86b8-17f0-4b03-fecf-dc5d72fde124"
+        }
       },
       "source": [
         "# get all the averages and totals we might want, grouping by language\n",
@@ -680,7 +681,7 @@
         "# Tada!\n",
         "lyrics_sum_avgd"
       ],
-      "execution_count": 46,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -739,11 +740,11 @@
       "metadata": {
         "id": "eIoGZolJNpri",
         "colab_type": "code",
+        "outputId": "687dd0cb-2f23-45b4-eb88-49c2a8e7e40b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 175
-        },
-        "outputId": "687dd0cb-2f23-45b4-eb88-49c2a8e7e40b"
+        }
       },
       "source": [
         "# concatenate songs of the same language together\n",
@@ -763,7 +764,7 @@
         "\n",
         "lyrics_sum_cat"
       ],
-      "execution_count": 43,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -810,7 +811,8 @@
       },
       "source": [
         "# Let's save these guys so we can refer back to them later\n",
-        "save(lyrics_sum_avgd, lyrics_sum_cat, file = \"ABALTM5L.RData\")"
+        "write.csv(lyrics_sum_avgd, file = \"BAT1_lsum_avgd.csv\")\n",
+        "write.csv(lyrics_sum_cat, file = \"BAT2_lsum_cat.csv\")"
       ],
       "execution_count": 0,
       "outputs": []
